--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/resume/node_modules
 
 # testing
-/coverage
+/resume/coverage
 
 # production
-/build
+/resume/build
 
 # misc
 .DS_Store
@@ -19,3 +19,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+/resume/npm-debug.log*
+/resume/yarn-debug.log*
+/resume/yarn-error.log*
